# ACADO

./: README.md
HM/: CMakeLists.txt  ctrl_mpc_code_gen.cpp  ctrl_mpc_sim.cpp  planar_drone_20.cpp  prob1_controls.txt
HM/include/prob2_mpc_export/: acado_common.h  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
HM/prob2_mpc_export/: acado_integrator.c  acado_qpoases_interface.cpp
example/acado_manual_test/: CMakeLists.txt  README.md
example/acado_manual_test/MPC_SOLVER/: acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
example/acado_manual_test/src/chapter3/: controls.txt  dae_optimization  discrete_time_optimization  log.txt  log_input.txt  log_state.txt  ocp  ocp_initialize_with_datastructure  ocp_initialize_with_datastructure.cpp  ocp_initialize_with_text  ocp_initialize_with_text.cpp  ocp_logging  ocp_logging.cpp  ocp_option_change  ocp_option_change.cpp  ocp_storing2datastructure  ocp_storing2datastructure.cpp  ocp_storing2text  ocp_storing2text.cpp  p.txt  parameters.txt  states.txt  u.txt  x.txt
example/acado_manual_test/src/chapter4/: MO0plug_flow_reactor_nbi_controls.txt  MO0plug_flow_reactor_nnc_states.txt  MO0plug_flow_reactor_ws_controls.txt  MO0plug_flow_reactor_ws_states.txt  MO10plug_flow_reactor_nbi_controls.txt  MO10plug_flow_reactor_nnc_states.txt  MO10plug_flow_reactor_ws_controls.txt  MO10plug_flow_reactor_ws_states.txt  MO1plug_flow_reactor_nbi_controls.txt  MO1plug_flow_reactor_nbi_states.txt  MO1plug_flow_reactor_nnc_controls.txt  MO1plug_flow_reactor_nnc_states.txt  MO1plug_flow_reactor_ws_controls.txt  MO1plug_flow_reactor_ws_states.txt  MO2plug_flow_reactor_nbi_controls.txt  MO2plug_flow_reactor_nbi_states.txt  MO2plug_flow_reactor_nnc_controls.txt  MO2plug_flow_reactor_nnc_states.txt  MO2plug_flow_reactor_ws_controls.txt  MO2plug_flow_reactor_ws_states.txt  MO3plug_flow_reactor_nbi_controls.txt  MO3plug_flow_reactor_nbi_states.txt  MO3plug_flow_reactor_nnc_controls.txt  MO3plug_flow_reactor_nnc_states.txt  MO3plug_flow_reactor_ws_controls.txt  MO3plug_flow_reactor_ws_states.txt  MO4plug_flow_reactor_nbi_controls.txt  MO4plug_flow_reactor_nbi_states.txt  MO4plug_flow_reactor_nnc_controls.txt  MO4plug_flow_reactor_nnc_states.txt  MO4plug_flow_reactor_ws_controls.txt  MO4plug_flow_reactor_ws_states.txt  MO5plug_flow_reactor_nbi_controls.txt  MO5plug_flow_reactor_nbi_states.txt  MO5plug_flow_reactor_nnc_controls.txt  MO5plug_flow_reactor_nnc_states.txt  MO5plug_flow_reactor_ws_controls.txt  MO5plug_flow_reactor_ws_states.txt  MO6plug_flow_reactor_nbi_controls.txt  MO6plug_flow_reactor_nbi_states.txt  (+39 more)
example/acado_manual_test/src/chapter5/: parameter_estimation  parameter_estimation.cpp  parameter_estimation_data.txt
example/acado_manual_test/src/chapter6/: process  process.cpp  process_advanced  process_advanced.cpp
example/acado_manual_test/src/chapter7/: Feedback control  controller  controller_classical
example/acado_manual_test/src/chapter8/: simulation_classical_controller  simulation_mpc_controller
example/acado_manual_test/src/practice/: prob1  prob1.cpp  prob1_states.txt  prob2.cpp
example/planar_drone_ACADO/: CMakeLists.txt  README.md  code_generation_planar_drone_codegen  planar_drone_20.cpp  planar_drone_codegen.cpp  prob2_codegen.cpp
example/planar_drone_ACADO/MPC_SOLVER/: acado_common.h
example/planar_drone_ACADO/planar_drone_mpc_export/: acado_common.h  acado_qpoases_interface.cpp
example/planar_drone_acados/: acados_ocp_planar_drone.json  planar_drone_model.py  planar_drone_ocp.py  utils.py
example/planar_drone_acados/c_generated_code/: Makefile  acados_sim_solver_planar_drone.c  acados_sim_solver_planar_drone.h  acados_solver.pxd  acados_solver_planar_drone.c  acados_solver_planar_drone.h  main_planar_drone.c  main_sim_planar_drone.c
example/planar_drone_acados/c_generated_code/planar_drone_constraints/: planar_drone_constr_h_fun.c  planar_drone_constr_h_fun_jac_uxt_zt.c  planar_drone_constr_h_fun_jac_uxt_zt_hess.c  planar_drone_constraints.h
example/planar_drone_acados/c_generated_code/planar_drone_cost/: planar_drone_cost.h  planar_drone_cost_y_0_fun.c  planar_drone_cost_y_0_fun_jac_ut_xt.c  planar_drone_cost_y_0_hess.c  planar_drone_cost_y_e_fun.c  planar_drone_cost_y_e_fun_jac_ut_xt.c  planar_drone_cost_y_e_hess.c  planar_drone_cost_y_fun.c  planar_drone_cost_y_fun_jac_ut_xt.c  planar_drone_cost_y_hess.c
example/planar_drone_acados/c_generated_code/planar_drone_model/: planar_drone_expl_ode_fun.c  planar_drone_expl_ode_hess.c  planar_drone_expl_vde_adj.c  planar_drone_expl_vde_forw.c  planar_drone_impl_dae_fun.c  planar_drone_impl_dae_fun_jac_x_xdot_u.c  planar_drone_impl_dae_fun_jac_x_xdot_u_z.c  planar_drone_impl_dae_fun_jac_x_xdot_z.c  planar_drone_impl_dae_jac_x_xdot_u_z.c  planar_drone_model.h
review/: Manual.md  matual.md
